--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+/* @custom-variant dark (&:where(.dark, .dark *)); */
+@custom-variant dark (&:where(.dark, .dark *));
 
 ::-webkit-scrollbar {
   width: 8px;
@@ -15,5 +17,5 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(12, 12, 34); 
+  background: rgb(12, 12, 34);
 }
