--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,12 @@
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
+@import "tailwindcss";
 /* @custom-variant dark (&:where(.dark, .dark *)); */
 @custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --font-urbanist: "Urbanist", sans-serif;
+}
 
 ::-webkit-scrollbar {
   width: 8px;
